syntax = "proto3";

package sign;

option go_package = "tecdsa/proto/sign";

service SignService {
  rpc Sign(stream SignMessage) returns (stream SignMessage);
}

message SignMessage {
  oneof msg {
    SignGatewayTo1Output signGatewayTo1Output = 1;
    SignRound1To2Output signRound1To2Output = 2;
    SignRound2To3Output signRound2To3Output = 3;
    SignRound3To4Output signRound3To4Output = 4;
    SignRound4ToGatewayOutput signRound4ToGatewayOutput = 5;
  }
}



// 요청 -> 라운드 1 
message SignGatewayTo1Output {
}

// 라운드 1 -> 라운드 2
message SignRound1To2Output {
  bytes payload = 4; 
}

// 라운드 2 -> 라운드 3
message SignRound2To3Output {
  bytes payload = 1;
}

// 라운드 3 -> 라운드 4
message SignRound3To4Output {
  bytes payload = 1;
}

// 라운드 4 -> 게이트웨이
message SignRound4ToGatewayOutput {
  string request_id = 1;
  uint64 v = 2;
  bytes r = 3;
  bytes s = 4;
}
